test/corpus/instructions/complex_separators.test
==========
[test] binary operator with newline
==========
add $t0, 1
+ 2
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (register)
      (binary_expression
        left: (decimal)
        operator: (additive_operator)
        right: (decimal)))))

==========
[test] binary operator with newline and spaces
==========
add $t0, 1
   + 2
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (register)
      (binary_expression
        left: (decimal)
        operator: (additive_operator)
        right: (decimal)))))

==========
[test] binary operator with multiple newlines
==========
add $t0, 1


+ 2
---

(program
  (instruction
    mnemonic: (instruction_mnemonic)
    operands: (operands
      (register)
      (binary_expression
        left: (decimal)
        operator: (additive_operator)
        right: (decimal)))))
